npm start should actually run the application (and not in dev/test mode)

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Belgian DIV API",
   "main": "server.js",
   "scripts": {
-    "start": "node_modules\\.bin\\nodemon server.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [
