--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "dependencies": {
     "express": "^4.13.3",
     "morgan": "^1.6.1",
-    "phantomjs": "^1.9.19"
+    "phantomjs-prebuilt": "^2.1.7"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
